ggplot2 0.9 (2009-XX-XX) ----------------------------------------

* stat_quantile: correctly group results
* annotate: adds layers with legend = FALSE
* add log + 1 transformer (contributed by Jean-Olivier Irisson)
* fixed bug when overriding aesthetics with NULL
* legend: don't try and display legend when unnecessary scale added
* legend: text labels now correctly left-aligned when non-numeric
* coord_equal: correctly place tick marks (Fixes #61)
* stat_contour: fix error if x or y coordinates were negative
* stat_qq: always use sorted data (rather than interpolated quantiles) on sample axis.  This makes it behave more like qqnorm